changed popup classname to avoid overlap

--- a/src/sass/components/shared.scss
+++ b/src/sass/components/shared.scss
@@ -37,7 +37,7 @@ div#root div.App div.static-content table tbody tr.highlight {
   position: absolute;
 }
 
-.popup {
+.newsletter-popup {
   position: absolute;
   top: 0;
   left: 0;
